--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 .submit{
    display: none;
 }
+
+.lineThrough{
+   text-decoration: line-through;
+}
+
+.listTodo{
+   font-size: 1.2rem;
+   cursor: pointer;
+   /* font-weight: bold; */
+   opacity: 0.7;
+}
