--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,37 @@
-.submit{
+.submit {
    display: none;
 }
 
-.lineThrough{
+.lineThrough {
    text-decoration: line-through;
 }
 
-.listTodo{
+.listTodo {
    font-size: 1.2rem;
    cursor: pointer;
    /* font-weight: bold; */
    opacity: 0.7;
+}
+
+.menu {
+   font-size: 1.3rem;
+   text-align: center;
+   background-color: #48b;
+
+   /* padding: 0.5rem; */
+   
+   a {
+      opacity: 0.6;
+      color: #fff;
+      display: inline-block;
+      padding: 0.5rem 1.5rem;
+      text-decoration: none;
+   }
+   .linkActive {
+      opacity: 1;
+   }
+   span{
+      color: rgb(255, 166, 0);
+      font-weight: bold;
+   }
 }
